# music-library-mcp

./: .gitignore  .mcp.json  DYNAMIC_RESOURCES_OPTIMIZATION.md  FAME_SCORE_IMPLEMENTATION.md  RANDOM_DISCOVERY_GUIDE.md  README.md  SCHEMA_IMPLEMENTATION_SUMMARY.md  pyproject.toml  test_random_discovery.py  test_random_discovery_local.py
.claude/: settings.json  settings.local.json
docs/: CLAUDE.md  COLLABORATION_FEATURE.md  COLLABORATION_SUMMARY.md  CONTRIBUTORS_FEATURE.md  DATA_SCHEMA_DOCUMENTATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START.md  REORGANIZATION_SUMMARY.md  REVIEW_APP_README.md  SCHEMA_TOUCHPOINTS.md  SETUP.md  USAGE_EXAMPLES.md
examples/: claude_desktop_config.example.json
music_library_mcp/: __init__.py  database.py  server.py
scripts/: apply_manual_reviews.py  enrich_songs.py  review_app.py  start_server.sh  test_setup.sh
scripts/templates/: review.html
songs/: manual_reviews.json  songs.json
tests/: test_collaborations.py  test_contributors.py  test_server.py
