[project]
name = "music-library-mcp"
version = "0.1.0"
description = "MCP server for querying and exploring a music library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
music-library-mcp = "music_library_mcp.server:main"

[tool.setuptools.packages.find]
include = ["music_library_mcp*"]
exclude = ["songs*", "scripts*", "tests*", "docs*", "examples*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
